Add JVM args for Confluence